@@ -23,6 +23,6 @@ real Dual::u0(unsigned int i)
 //-----------------------------------------------------------------------------
 real Dual::f(const Vector& u, real t, unsigned int i)
 {
-  return 0.0;
+  return 1.0;
 }
 //-----------------------------------------------------------------------------
